# sr-rs

./: .gitignore  Cargo.toml  Makefile  README.md
hooks/: pre-commit
scripts/: setup.sh
src/: app.rs  backend.rs  input_enums.rs  logging.rs  main.rs  match_struct.rs  search_replace.rs  tui.rs
src/enums/: input_enums.rs  mod.rs
src/models/: match_struct.rs  mod.rs
src/search/: mod.rs  replace.rs  search.rs
src/search/.github/workflows/: main.yml
src/ui/: cursor.rs  input_boxes.rs  layout.rs  mod.rs  preview_window.rs  ui.rs
testfiles/: f1.txt  f2.txt
