[package]
name = "sr-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
strum = { version = "0.26.1", features = ["std", "strum_macros", "derive"] }
tui-input = "0.8.0"
