[package]
name = "sr-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
glob = "0.3.1"
log = "0.4.21"
ratatui = "0.26.1"
simplelog = "0.12.2"
strum = { version = "0.26.1", features = ["std", "strum_macros", "derive"] }
tui-input = "0.8.0"

[dev-dependencies]
tempfile = "3.10.1"
